fixed styling so that home page wouldnt be out of place

--- a/src/styles/article.css
+++ b/src/styles/article.css
@@ -7,10 +7,6 @@ body {
   background-color: white;
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-flow: wrap;
-  margin: 0;
-  height: 100%;
 }
 
 /* Start */
